# agentic-custom-cover-letter-writer

./: README.md  interview_materials.md  pyproject.toml  sample_resume.md  tailored_cover_letter.md
src/cover_letter_writer/: crew.py  main.py
src/cover_letter_writer/config/: agents.yaml  tasks.yaml
